fixed list in sale, mb in footer, z-index in menu

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -267,6 +267,7 @@
   .footer-subtext {
     font-size: 14px;
     line-height: 1.29;
+    margin-bottom: 0;
   }
 
   .footer-servis,
