--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -94,7 +94,6 @@
 }
 
 .modifications {
-  width: 297px;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
@@ -106,8 +105,6 @@
   justify-content: left;
   flex-wrap: wrap;
   gap: 8px;
-  width: 279px;
-  height: 112px;
 }
 
 .tag {
